--- a/nested-checkboxes/package.json
+++ b/nested-checkboxes/package.json
@@ -6,12 +6,20 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "vitest"
   },
   "dependencies": {
     "@astrojs/react": "^4.2.5",
     "@astrojs/ts-plugin": "^1.10.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "astro": "^5.7.5",
     "install": "^0.13.0"
+  },
+  "devDependencies": {
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.1.0",
+    "vitest": "^3.1.2"
   }
 }
